# uoh-sqak-ex04

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT-lec07-pdfs.md  CONTEXT-lecture-07.md  IDEA-raw.txt  IDEA.md  Plan.md  README.md  RULES.md  Todo.md  UPGRADE-SPEC.md  prd.md  pyproject.toml  uoh-rl07-ex04-template.docx
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-13T14-54-35-963Z.yml
config/: agents.json  graphify.json  logging.json  rate_limits.json  tasks.json  vault.json
diagrams/: block_diagram.mmd  oop_diagram.mmd  oop_plan.md
docs/: PROMPTS.md
docs/adr/: 0001-use-real-graphify-tool.md  0002-langgraph-over-crewai.md  0003-pin-python-3.13-ci.md  0004-ast-fallback.md  0005-gatekeeper-wraps-all-calls.md
docs/prd/: agent.md  extensions.md  gatekeeper-token-meter.md  graphify.md  upgrade-knowledge-graph.md  vault.md
reports/: architecture.md  bug_analysis.md  fix.diff  graph_report_annotated.md  knowledge_diff.md  lost_in_the_middle.md  real_run.md  repro_fail.txt  repro_pass.txt  token_comparison.md
reports/graph/: GRAPH_REPORT.md  graph.html  graph.json  graph_interactive.html  manifest.json
reports/metrics/: graph.json  naive.json  real_run_trace.json
reports/vault_after/: hot.md  index.md  log.md
reports/vault_before/: log.md
scripts/: check_file_lines.py  fill_submission_pdf.py  lost_in_the_middle.py  real_run_demo.py
src/graphguide/: __init__.py  constants.py  main.py  reporting.py
target_repo/: PROVENANCE.md
target_repo/luigi/: setup.py
tests/: conftest.py
vault/: index.md
(+223 files in other folders)
